syntax = "proto3";

import "google/protobuf/timestamp.proto";

package insert;

service InsertService {
  rpc InsertMeetings(InsertMeetingsRequest) returns (InsertMeetingsResponse);
}

message InsertMeetingsRequest {
  message Meeting {
    message Session {
      int32 key = 1; 
      string kind = 2; 
      string name = 3 ;
      google.protobuf.Timestamp start_date = 4; 
      google.protobuf.Timestamp end_date = 5; 
      string path = 6; 
    }

    int32 key = 1;
    int32 number = 2;
    string location = 3;
    string official_name = 4;
    string name = 5;

    repeated Session sessions = 7;
  }

  int32 year = 1;
  repeated Meeting meetings = 2;
}

message InsertMeetingsResponse {}
